crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/fix_applied_inside_vue_template_expression.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<template>
  <li :tabindex="1 ** 2">{{ 1 ** 2 }}</li>
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
