crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/fix_inside_directive_requotes_when_needed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<template>
	<div :title='foo("bar") + 1 ** 2'></div>
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
